# codeforge-examples

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cpp/: CMakeLists.txt  if-statements.cpp  state-machine.cpp
qpcpp/: CMakeLists.txt  if-statements.cpp  magic-key.cpp
